2013-06-03  Andy Buckley  <andy.buckley@cern.ch>

	* Adding explicit protection against using inf/nan scalefactors in
	ATLAS_2011_S9131140 and H1_2000_S4129130.

	* Making Analysis::scale noisly complain about invalid
	scalefactors.

2013-05-31  Andy Buckley  <andy.buckley@cern.ch>

	* Reducing the TeX main memory to ~500MB. Turns out that it *can*
	be too large with new versions of TeXLive!

2013-05-30  Andy Buckley  <andy.buckley@cern.ch>

	* Reverting bookScatter2D behaviour to never look at ref data, and
	updating a few affected analyses. This should fix some bugs with
	doubled datapoints introduced by the previous behaviour+addPoint.

	* Adding a couple of minor Utils.hh and MathUtils.hh features.

2013-05-29  Andy Buckley  <andy.buckley@cern.ch>

	* Removing Constraints.hh header.

	* Minor bugfixes and improvements in Scatter2D booking and MC_JetAnalysis.

2013-05-28  Andy Buckley  <andy.buckley@cern.ch>

	* Removing defunct HistoFormat.hh and HistoHandler.{hh,cc}

2013-05-27  Andy Buckley  <andy.buckley@cern.ch>

	* Removing includes of Logging.hh, RivetYODA.hh, and
	ParticleIdUtils.hh from analyses (and adding an include of
	ParticleIdUtils.hh to Analysis.hh)

	* Removing now-unused .fhh files.

	* Removing lots of unnecessary .fhh includes from core classes:
	everything still compiling ok. A good opportunity to tidy this up
	before the release.

	* Moving the rivet-completion script from the data dir to bin (the
	completion is for scripts in bin, and this makes development
	easier).

	* Updating bash completion scripts for YODA format and
	compare-histos -> rivet-cmphistos.

2013-05-23  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Doxy comments and a couple of useful convenience functions to Utils.hh.

	* Final tweaks to ATLAS ttbar jet veto analysis (checked logic with Kiran Joshi).

2013-05-15  Andy Buckley  <andy.buckley@cern.ch>

	* Many 1.0 -> weight bugfixes in ATLAS_2011_I945498.

	* yaml-cpp v3 support re-introduced in .info parsing.
