@@ -1,3 +1,7 @@
+2013-06-04  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding Analysis::integrate() functions and tidying the Analysis.hh file a bit.
+
 2013-06-03  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding explicit protection against using inf/nan scalefactors in
